@@ -1,13 +1,11 @@
 use strict;
 use warnings;  
 
-use Test::More;
+use Test::More qw(no_plan);
 use lib qw(t/lib);
 use DBICTest;
 
 my $schema = DBICTest->init_schema();
-
-plan tests => 13;
 
 # first page
 my $it = $schema->resultset("CD")->search(
@@ -76,3 +74,11 @@ $it = $schema->resultset("CD")->search(
 )->search( undef, { order_by => 'title' } );
 
 is( $it->count, 2, "chained searches paging ok" );
+
+my $p = sub { $schema->resultset("CD")->page(1)->pager->entries_per_page; };
+
+is($p->(), 10, 'default rows is 10');
+
+$schema->default_resultset_attributes({ rows => 5 });
+
+is($p->(), 5, 'default rows is 5');
