@@ -1,5 +1,6 @@
 Revision history for DBIx::Class
 
+        - add default_resultset_attributes entry to Schema
         - optimisation in DBI::Cursor to check software_limit before falling
           back to base Cursor->all
         - fix bug with create_multi not inserting non-storage objects
